--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Textutils is uesd to manipulate you text as you want"
+      content="Textutils is a word counter and a character counting utility which can be used to manipulate your text in the way you want. You can remove extra spaces, copy the manipulated text as well as convert your text from Uppercase to Lowercase and Lowercase to Uppercase"
     />
     <link rel="apple-touch-icon" href="favicon-16x16.png" />
     
@@ -15,7 +15,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <title>TextUtils-Home</title>
+    <title>TextUtils- Word Counter | Character Counter | Uppercase to Lowercase | Lowercase to Uppercase </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
